--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>URL Opener</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 20px;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-        input, select, button {
-            padding: 8px;
-            font-size: 16px;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Test Case Generator</title>
+  <style>
+    body { font-family: Arial; margin: 40px; background: #fafafa; }
+    h1 { color: #333; }
+    textarea, input { width: 100%; margin: 10px 0; padding: 10px; font-size: 1em; }
+    button { background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer; }
+    button:hover { background: #0056b3; }
+    pre { background: #fff; padding: 15px; border-radius: 5px; box-shadow: 0 0 5px #ddd; }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <input type="text" id="urlInput" placeholder="Enter URL here">
-        <select id="openType">
-            <option value="tab">Open in Tab</option>
-            <option value="window">Open in Window</option>
-        </select>
-        <button onclick="openURL()">Open</button>
-    </div>
+  <h1>🧪 Product Requirement → Test Case Generator</h1>
 
-    <script>
-        function openURL() {
-            const url = document.getElementById('urlInput').value;
-            const openType = document.getElementById('openType').value;
-            
-            if (!url) {
-                alert('Please enter a URL');
-                return;
-            }
+  <label>🔑 OpenAI API Key:</label>
+  <input type="password" id="apiKey" placeholder="Enter your OpenAI API key">
 
-            // Add http:// if not present
-            let formattedUrl = url;
-            if (!url.startsWith('http://') && !url.startsWith('https://')) {
-                formattedUrl = 'http://' + url;
-            }
+  <label>📄 Product Requirement:</label>
+  <textarea id="requirement" placeholder="e.g. User should be able to log in using email and password."></textarea>
 
-            if (openType === 'tab') {
-                window.open(formattedUrl, '_blank');
-            } else {
-                window.open(formattedUrl, '_blank', 'width=800,height=600');
-            }
-        }
-    </script>
+  <button onclick="generateTestCases()">Generate Test Cases</button>
+
+  <h3>🧾 Generated Test Cases:</h3>
+  <pre id="output"></pre>
+
+  <script>
+    async function generateTestCases() {
+      const apiKey = document.getElementById('apiKey').value.trim();
+      const requirement = document.getElementById('requirement').value.trim();
+      const output = document.getElementById('output');
+      
+      if (!apiKey || !requirement) {
+        alert("Please enter both API key and requirement!");
+        return;
+      }
+
+      output.innerText = "⏳ Generating test cases...";
+
+      const prompt = `
+      Generate detailed test cases for the following product requirement:
+      "${requirement}"
+
+      Format each as:
+      1. Title
+      2. Precondition
+      3. Steps
+      4. Expected Result
+      `;
+
+      try {
+        const response = await fetch("https://api.openai.com/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${apiKey}`
+          },
+          body: JSON.stringify({
+            model: "gpt-4o-mini",
+            messages: [{ role: "user", content: prompt }]
+          })
+        });
+
+        const data = await response.json();
+        if (data.error) throw data.error;
+
+        output.innerText = data.choices[0].message.content.trim();
+      } catch (err) {
+        output.innerText = "❌ Error: " + (err.message || JSON.stringify(err));
+      }
+    }
+  </script>
 </body>
 </html>
