--- a/index.html
+++ b/index.html
@@ -2,76 +2,133 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Test Case Generator</title>
+  <title>AI Multi-Language Caption Generator</title>
   <style>
-    body { font-family: Arial; margin: 40px; background: #fafafa; }
-    h1 { color: #333; }
-    textarea, input { width: 100%; margin: 10px 0; padding: 10px; font-size: 1em; }
-    button { background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer; }
-    button:hover { background: #0056b3; }
-    pre { background: #fff; padding: 15px; border-radius: 5px; box-shadow: 0 0 5px #ddd; }
+    body { font-family: Arial; max-width: 800px; margin: auto; padding: 20px; }
+    input, select, button, textarea { margin: 5px 0; width: 100%; padding: 8px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
   </style>
 </head>
 <body>
-  <h1>🧪 Product Requirement → Test Case Generator</h1>
 
-  <label>🔑 OpenAI API Key:</label>
-  <input type="password" id="apiKey" placeholder="Enter your OpenAI API key">
+<h1>AI Multi-Language Caption Generator</h1>
 
-  <label>📄 Product Requirement:</label>
-  <textarea id="requirement" placeholder="e.g. User should be able to log in using email and password."></textarea>
+<label>Topic / Niche:</label>
+<input type="text" id="topic" placeholder="e.g., Fitness, Travel, Food">
 
-  <button onclick="generateTestCases()">Generate Test Cases</button>
+<label>Caption Style:</label>
+<select id="style">
+  <option value="Motivational">Motivational</option>
+  <option value="Funny">Funny</option>
+  <option value="Promotional">Promotional</option>
+  <option value="Informative">Informative</option>
+</select>
 
-  <h3>🧾 Generated Test Cases:</h3>
-  <pre id="output"></pre>
+<label>Select Languages:</label>
+<select id="languages" multiple>
+  <option value="English" selected>English</option>
+  <option value="Spanish">Spanish</option>
+  <option value="Hindi">Hindi</option>
+  <option value="French">French</option>
+  <option value="German">German</option>
+</select>
 
-  <script>
-    async function generateTestCases() {
-      const apiKey = document.getElementById('apiKey').value.trim();
-      const requirement = document.getElementById('requirement').value.trim();
-      const output = document.getElementById('output');
-      
-      if (!apiKey || !requirement) {
-        alert("Please enter both API key and requirement!");
-        return;
-      }
+<label>Number of Captions:</label>
+<input type="number" id="count" value="5" min="1" max="20">
 
-      output.innerText = "⏳ Generating test cases...";
+<button onclick="generateCaptions()">Generate Captions</button>
 
-      const prompt = `
-      Generate detailed test cases for the following product requirement:
-      "${requirement}"
+<div id="loading" style="display:none;">Generating captions... ⏳</div>
 
-      Format each as:
-      1. Title
-      2. Precondition
-      3. Steps
-      4. Expected Result
-      `;
+<table id="resultTable" style="display:none;">
+  <thead>
+    <tr id="tableHeader"></tr>
+  </thead>
+  <tbody id="tableBody"></tbody>
+</table>
 
-      try {
-        const response = await fetch("https://api.openai.com/v1/chat/completions", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": `Bearer ${apiKey}`
-          },
-          body: JSON.stringify({
-            model: "gpt-4o-mini",
-            messages: [{ role: "user", content: prompt }]
-          })
-        });
+<script>
+async function generateCaptions() {
+  const topic = document.getElementById('topic').value;
+  const style = document.getElementById('style').value;
+  const languages = Array.from(document.getElementById('languages').selectedOptions).map(o => o.value);
+  const count = document.getElementById('count').value;
 
-        const data = await response.json();
-        if (data.error) throw data.error;
+  if (!topic || !languages.length) {
+    alert("Please enter a topic and select at least one language.");
+    return;
+  }
 
-        output.innerText = data.choices[0].message.content.trim();
-      } catch (err) {
-        output.innerText = "❌ Error: " + (err.message || JSON.stringify(err));
-      }
-    }
-  </script>
+  document.getElementById('loading').style.display = 'block';
+  document.getElementById('resultTable').style.display = 'none';
+
+  const prompt = `
+You are a social media content expert.
+Generate ${count} ${style} captions about "${topic}".
+Translate each caption into: ${languages.join(', ')}.
+Format the output as JSON:
+[
+  {
+    "English": "...",
+    "Spanish": "...",
+    "Hindi": "...",
+    "French": "...",
+    "German": "..."
+  }
+]
+If a language is not selected, omit it.
+`;
+
+  try {
+    const response = await fetch("https://api.openai.com/v1/chat/completions", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": "Bearer YOUR_OPENAI_API_KEY"
+      },
+      body: JSON.stringify({
+        model: "gpt-4o-mini",
+        messages: [{ role: "user", content: prompt }],
+        temperature: 0.7,
+      })
+    });
+
+    const data = await response.json();
+    const content = data.choices[0].message.content.trim();
+    const captions = JSON.parse(content);
+
+    // Build table
+    const headerRow = document.getElementById('tableHeader');
+    headerRow.innerHTML = '';
+    languages.forEach(lang => {
+      const th = document.createElement('th');
+      th.textContent = lang;
+      headerRow.appendChild(th);
+    });
+
+    const tableBody = document.getElementById('tableBody');
+    tableBody.innerHTML = '';
+    captions.forEach(item => {
+      const tr = document.createElement('tr');
+      languages.forEach(lang => {
+        const td = document.createElement('td');
+        td.textContent = item[lang] || '';
+        tr.appendChild(td);
+      });
+      tableBody.appendChild(tr);
+    });
+
+    document.getElementById('loading').style.display = 'none';
+    document.getElementById('resultTable').style.display = 'table';
+
+  } catch (err) {
+    console.error(err);
+    alert("Error generating captions. Check your API key and console.");
+    document.getElementById('loading').style.display = 'none';
+  }
+}
+</script>
+
 </body>
 </html>
