--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <title>AI Multi-Language Caption Generator</title>
   <style>
-    body { font-family: Arial; max-width: 800px; margin: auto; padding: 20px; }
-    input, select, button, textarea { margin: 5px 0; width: 100%; padding: 8px; }
+    body { font-family: Arial; max-width: 900px; margin: auto; padding: 20px; }
+    h1 { text-align: center; }
+    input, select, button, textarea { margin: 5px 0; padding: 8px; font-size: 16px; }
+    .language-buttons { display: flex; flex-wrap: wrap; margin-bottom: 10px; }
+    .lang-btn {
+      border: 1px solid #ccc; padding: 8px 12px; margin: 3px; border-radius: 5px;
+      cursor: pointer; background-color: #f9f9f9; transition: 0.2s;
+    }
+    .lang-btn:hover { background-color: #e0e0e0; }
+    .lang-btn.selected { background-color: #007bff; color: #fff; border-color: #007bff; }
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    #loading { display: none; color: #007bff; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -26,20 +35,20 @@
 </select>
 
 <label>Select Languages:</label>
-<select id="languages" multiple>
-  <option value="English" selected>English</option>
-  <option value="Spanish">Spanish</option>
-  <option value="Hindi">Hindi</option>
-  <option value="French">French</option>
-  <option value="German">German</option>
-</select>
+<div class="language-buttons">
+  <div class="lang-btn selected" data-lang="English">English</div>
+  <div class="lang-btn" data-lang="Spanish">Spanish</div>
+  <div class="lang-btn" data-lang="Hindi">Hindi</div>
+  <div class="lang-btn" data-lang="French">French</div>
+  <div class="lang-btn" data-lang="German">German</div>
+</div>
 
 <label>Number of Captions:</label>
 <input type="number" id="count" value="5" min="1" max="20">
 
 <button onclick="generateCaptions()">Generate Captions</button>
 
-<div id="loading" style="display:none;">Generating captions... ⏳</div>
+<div id="loading">Generating captions... ⏳</div>
 
 <table id="resultTable" style="display:none;">
   <thead>
@@ -49,21 +58,29 @@
 </table>
 
 <script>
-async function generateCaptions() {
-  const topic = document.getElementById('topic').value;
-  const style = document.getElementById('style').value;
-  const languages = Array.from(document.getElementById('languages').selectedOptions).map(o => o.value);
-  const count = document.getElementById('count').value;
+  // Toggle language selection
+  const langButtons = document.querySelectorAll('.lang-btn');
+  langButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      btn.classList.toggle('selected');
+    });
+  });
 
-  if (!topic || !languages.length) {
-    alert("Please enter a topic and select at least one language.");
-    return;
-  }
+  async function generateCaptions() {
+    const topic = document.getElementById('topic').value.trim();
+    const style = document.getElementById('style').value;
+    const languages = Array.from(document.querySelectorAll('.lang-btn.selected')).map(b => b.dataset.lang);
+    const count = document.getElementById('count').value;
 
-  document.getElementById('loading').style.display = 'block';
-  document.getElementById('resultTable').style.display = 'none';
+    if (!topic || !languages.length) {
+      alert("Please enter a topic and select at least one language.");
+      return;
+    }
 
-  const prompt = `
+    document.getElementById('loading').style.display = 'block';
+    document.getElementById('resultTable').style.display = 'none';
+
+    const prompt = `
 You are a social media content expert.
 Generate ${count} ${style} captions about "${topic}".
 Translate each caption into: ${languages.join(', ')}.
@@ -77,57 +94,57 @@ Format the output as JSON:
     "German": "..."
   }
 ]
-If a language is not selected, omit it.
+Only include the languages selected by the user.
 `;
 
-  try {
-    const response = await fetch("https://api.openai.com/v1/chat/completions", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer YOUR_OPENAI_API_KEY"
-      },
-      body: JSON.stringify({
-        model: "gpt-4o-mini",
-        messages: [{ role: "user", content: prompt }],
-        temperature: 0.7,
-      })
-    });
-
-    const data = await response.json();
-    const content = data.choices[0].message.content.trim();
-    const captions = JSON.parse(content);
-
-    // Build table
-    const headerRow = document.getElementById('tableHeader');
-    headerRow.innerHTML = '';
-    languages.forEach(lang => {
-      const th = document.createElement('th');
-      th.textContent = lang;
-      headerRow.appendChild(th);
-    });
-
-    const tableBody = document.getElementById('tableBody');
-    tableBody.innerHTML = '';
-    captions.forEach(item => {
-      const tr = document.createElement('tr');
-      languages.forEach(lang => {
-        const td = document.createElement('td');
-        td.textContent = item[lang] || '';
-        tr.appendChild(td);
+    try {
+      const response = await fetch("https://api.openai.com/v1/chat/completions", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": "Bearer YOUR_OPENAI_API_KEY"
+        },
+        body: JSON.stringify({
+          model: "gpt-4o-mini",
+          messages: [{ role: "user", content: prompt }],
+          temperature: 0.7,
+        })
       });
-      tableBody.appendChild(tr);
-    });
 
-    document.getElementById('loading').style.display = 'none';
-    document.getElementById('resultTable').style.display = 'table';
+      const data = await response.json();
+      const content = data.choices[0].message.content.trim();
+      const captions = JSON.parse(content);
 
-  } catch (err) {
-    console.error(err);
-    alert("Error generating captions. Check your API key and console.");
-    document.getElementById('loading').style.display = 'none';
+      // Build table
+      const headerRow = document.getElementById('tableHeader');
+      headerRow.innerHTML = '';
+      languages.forEach(lang => {
+        const th = document.createElement('th');
+        th.textContent = lang;
+        headerRow.appendChild(th);
+      });
+
+      const tableBody = document.getElementById('tableBody');
+      tableBody.innerHTML = '';
+      captions.forEach(item => {
+        const tr = document.createElement('tr');
+        languages.forEach(lang => {
+          const td = document.createElement('td');
+          td.textContent = item[lang] || '';
+          tr.appendChild(td);
+        });
+        tableBody.appendChild(tr);
+      });
+
+      document.getElementById('loading').style.display = 'none';
+      document.getElementById('resultTable').style.display = 'table';
+
+    } catch (err) {
+      console.error(err);
+      alert("Error generating captions. Check your API key and console.");
+      document.getElementById('loading').style.display = 'none';
+    }
   }
-}
 </script>
 
 </body>
