--- a/index.html
+++ b/index.html
@@ -1,189 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Multi-Language Caption Generator</title>
-  <style>
-    body { font-family: Arial; max-width: 900px; margin: auto; padding: 20px; }
-    h1 { text-align: center; }
-    input, button { margin: 5px 0; padding: 8px; font-size: 16px; }
-    label { font-weight: bold; display: block; margin-top: 10px; }
-    .language-buttons { display: flex; flex-wrap: wrap; margin-bottom: 10px; }
-    .lang-btn {
-      border: 1px solid #ccc; padding: 8px 12px; margin: 3px; border-radius: 5px;
-      cursor: pointer; background-color: #f9f9f9; transition: 0.2s;
-    }
-    .lang-btn:hover { background-color: #e0e0e0; }
-    .lang-btn.selected { background-color: #007bff; color: #fff; border-color: #007bff; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; vertical-align: top; }
-    #loading { display: none; color: #007bff; font-weight: bold; }
-    .copy-btn {
-      display: inline-block;
-      margin-top: 5px;
-      font-size: 12px;
-      padding: 2px 6px;
-      background-color: #007bff; 
-      color: #fff; 
-      border-radius: 4px;
-      cursor: pointer;
-      user-select: none;
-    }
-    .copy-btn:hover { background-color: #0056b3; }
-  </style>
+<meta charset="UTF-8">
+<title>Social Media Buddy</title>
+<style>
+  body { font-family: Arial; margin:0; padding:0; display:flex; height:100vh; }
+  #sidebar { width: 200px; background:#333; color:#fff; display:flex; flex-direction:column; transition: 0.3s; }
+  #sidebar.hide { margin-left:-200px; }
+  #sidebar h2 { text-align:center; padding:10px 0; }
+  #sidebar button { background:none; border:none; color:#fff; text-align:left; padding:10px; cursor:pointer; font-size:16px; }
+  #sidebar button:hover { background:#444; }
+  #content { flex:1; padding:20px; overflow:auto; }
+  #hamburger { position:absolute; top:10px; left:10px; font-size:24px; cursor:pointer; color:#333; }
+  h1 { text-align:center; }
+  label { font-weight:bold; display:block; margin-top:10px; }
+  input, button { margin:5px 0; padding:8px; font-size:16px; }
+  .language-buttons { display:flex; flex-wrap:wrap; margin-bottom:10px; }
+  .lang-btn { border:1px solid #ccc; padding:8px 12px; margin:3px; border-radius:5px; cursor:pointer; background:#f9f9f9; transition:0.2s; }
+  .lang-btn:hover { background:#e0e0e0; }
+  .lang-btn.selected { background:#007bff; color:#fff; border-color:#007bff; }
+  table { border-collapse:collapse; width:100%; margin-top:20px; }
+  th, td { border:1px solid #ccc; padding:8px; text-align:left; vertical-align:top; }
+  .copy-btn { display:inline-block; margin-top:5px; font-size:12px; padding:2px 6px; background:#007bff; color:#fff; border-radius:4px; cursor:pointer; user-select:none; }
+  .copy-btn:hover { background:#0056b3; }
+  #loading { display:none; color:#007bff; font-weight:bold; }
+  .generator { display:none; }
+</style>
 </head>
 <body>
 
-<h1>AI Multi-Language Caption Generator</h1>
+<div id="hamburger">☰</div>
 
-<label>Topic / Niche:</label>
-<input type="text" id="topic" placeholder="e.g., Fitness, Travel, Food" value="Food">
-
-<label>Select Languages:</label>
-<div class="language-buttons">
-  <div class="lang-btn selected" data-lang="English">English</div>
-  <div class="lang-btn selected" data-lang="Spanish">Spanish</div>
-  <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
-  <div class="lang-btn" data-lang="French">French</div>
-  <div class="lang-btn" data-lang="German">German</div>
-  <div class="lang-btn" data-lang="Kannada">Kannada</div>
+<div id="sidebar">
+  <h2>Social Media Buddy</h2>
+  <button onclick="showGenerator('caption')">Caption Generator</button>
+  <button onclick="showGenerator('meme')">Meme Generator</button>
+  <button onclick="showGenerator('bio')">Bio Generator</button>
 </div>
 
-<label>Number of Captions:</label>
-<input type="number" id="count" value="5" min="1" max="20">
+<div id="content">
+  <div id="caption" class="generator">
+    <h1>Multi-Language Caption Generator</h1>
+    <label>Topic / Niche:</label>
+    <input type="text" id="caption-topic" placeholder="e.g., Fitness, Travel, Food" value="Food">
+    <label>Select Languages:</label>
+    <div class="language-buttons" id="caption-langs">
+      <div class="lang-btn selected" data-lang="English">English</div>
+      <div class="lang-btn selected" data-lang="Spanish">Spanish</div>
+      <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
+      <div class="lang-btn" data-lang="French">French</div>
+      <div class="lang-btn" data-lang="German">German</div>
+      <div class="lang-btn" data-lang="Kannada">Kannada</div>
+    </div>
+    <label>Number of Captions:</label>
+    <input type="number" id="caption-count" value="5" min="1" max="20">
+    <button onclick="generateCaptions()">Generate Captions</button>
+    <div id="caption-loading">Generating captions... ⏳</div>
+    <table id="caption-table" style="display:none;">
+      <thead><tr id="caption-header"></tr></thead>
+      <tbody id="caption-body"></tbody>
+    </table>
+  </div>
 
-<button onclick="generateCaptions()">Generate Captions</button>
+  <div id="meme" class="generator">
+    <h1>Multi-Language Meme Generator</h1>
+    <label>Theme / Text:</label>
+    <input type="text" id="meme-text" placeholder="e.g., Food, Coding, Fitness">
+    <label>Select Languages:</label>
+    <div class="language-buttons" id="meme-langs">
+      <div class="lang-btn selected" data-lang="English">English</div>
+      <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
+      <div class="lang-btn" data-lang="Hindi">Hindi</div>
+    </div>
+    <button onclick="generateMeme()">Generate Meme Text</button>
+    <div id="meme-loading">Generating meme... ⏳</div>
+    <table id="meme-table" style="display:none;">
+      <thead><tr id="meme-header"></tr></thead>
+      <tbody id="meme-body"></tbody>
+    </table>
+  </div>
 
-<div id="loading">Generating captions... ⏳</div>
+  <div id="bio" class="generator">
+    <h1>Social Media Bio Generator</h1>
+    <label>Name / Niche:</label>
+    <input type="text" id="bio-topic" placeholder="e.g., Fitness Coach, Traveler">
+    <label>Select Languages:</label>
+    <div class="language-buttons" id="bio-langs">
+      <div class="lang-btn selected" data-lang="English">English</div>
+      <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
+      <div class="lang-btn" data-lang="Hindi">Hindi</div>
+    </div>
+    <button onclick="generateBio()">Generate Bios</button>
+    <div id="bio-loading">Generating bios... ⏳</div>
+    <table id="bio-table" style="display:none;">
+      <thead><tr id="bio-header"></tr></thead>
+      <tbody id="bio-body"></tbody>
+    </table>
+  </div>
 
-<table id="resultTable" style="display:none;">
-  <thead>
-    <tr id="tableHeader"></tr>
-  </thead>
-  <tbody id="tableBody"></tbody>
-</table>
+</div>
 
 <script>
-  const langButtons = document.querySelectorAll('.lang-btn');
-  langButtons.forEach(btn => {
-    btn.addEventListener('click', () => btn.classList.toggle('selected'));
+  // Hamburger toggle
+  const hamburger = document.getElementById('hamburger');
+  const sidebar = document.getElementById('sidebar');
+  hamburger.addEventListener('click', () => sidebar.classList.toggle('hide'));
+
+  // Show generator
+  function showGenerator(id) {
+    document.querySelectorAll('.generator').forEach(g => g.style.display = 'none');
+    document.getElementById(id).style.display = 'block';
+  }
+  showGenerator('caption'); // default
+
+  // Toggle language selection
+  document.querySelectorAll('.language-buttons').forEach(div => {
+    div.querySelectorAll('.lang-btn').forEach(btn => {
+      btn.addEventListener('click', () => btn.classList.toggle('selected'));
+    });
   });
 
+  // Default captions fallback
   const defaultCaptions = [
-    {
-      "English": "Delicious pizza loaded with cheese! 🍕",
-      "Spanish": "¡Deliciosa pizza llena de queso! 🍕",
-      "Hindi": "पनीर से भरी स्वादिष्ट पिज़्ज़ा! 🍕",
-      "French": "Délicieuse pizza garnie de fromage! 🍕",
-      "German": "Leckere Pizza voller Käse! 🍕",
-      "Kannada": "ಚೀಸ್ ತುಂಬಿದ ರುಚಿಕರ ಪಿಜ್ಜಾ! 🍕"
-    },
-    {
-      "English": "Freshly baked croissants for a perfect breakfast 🥐",
-      "Spanish": "Cruasanes recién horneados para un desayuno perfecto 🥐",
-      "Hindi": "ताज़ा बेक्ड क्रोइसाँस परफेक्ट नाश्ते के लिए 🥐",
-      "French": "Croissants fraîchement cuits pour un petit déjeuner parfait 🥐",
-      "German": "Frisch gebackene Croissants für ein perfektes Frühstück 🥐",
-      "Kannada": "ಪೂರ್ಣವಾಗಿರುವ ಬೆಳಗಿನ ಭೋಜನಕ್ಕಾಗಿ تازಾ ಕ್ರೋಯ್ಸಾಂ 🥐"
-    },
-    {
-      "English": "Healthy green smoothie to boost your energy! 🍏",
-      "Spanish": "¡Batido verde saludable para aumentar tu energía! 🍏",
-      "Hindi": "अपनी ऊर्जा बढ़ाने के लिए हेल्दी ग्रीन स्मूदी! 🍏",
-      "French": "Smoothie vert sain pour booster votre énergie! 🍏",
-      "German": "Gesunder grüner Smoothie, um deine Energie zu steigern! 🍏",
-      "Kannada": "ನಿಮ್ಮ ಶಕ್ತಿ ಹೆಚ್ಚಿಸಲು ಆರೋಗ್ಯಕರ ಹಸಿರು ಸ್ಮೂದಿ! 🍏"
-    }
+    {"English":"Delicious pizza 🍕","Kannada":"ಚೀಸ್ ಪಿಜ್ಜಾ 🍕","Hindi":"पिज़्ज़ा 🍕"},
+    {"English":"Fresh croissants 🥐","Kannada":"ಕ್ರೋಸಾಂ 🥐","Hindi":"क्रोइसाँस 🥐"},
+    {"English":"Healthy smoothie 🍏","Kannada":"ಹಸಿರು ಸ್ಮೂದಿ 🍏","Hindi":"हरी स्मूदी 🍏"}
   ];
 
-  async function generateCaptions() {
-    const topic = document.getElementById('topic').value.trim() || "Food";
-    const languages = Array.from(document.querySelectorAll('.lang-btn.selected')).map(b => b.dataset.lang);
-    const count = parseInt(document.getElementById('count').value);
+  // Generate captions
+  function generateCaptions() {
+    const topic = document.getElementById('caption-topic').value;
+    const langs = Array.from(document.getElementById('caption-langs').querySelectorAll('.lang-btn.selected')).map(b=>b.dataset.lang);
+    const count = parseInt(document.getElementById('caption-count').value);
+    const loading = document.getElementById('caption-loading');
+    const table = document.getElementById('caption-table');
+    loading.style.display='block'; table.style.display='none';
 
-    if (!languages.length) { alert("Please select at least one language."); return; }
-
-    document.getElementById('loading').style.display = 'block';
-    document.getElementById('resultTable').style.display = 'none';
-
-    const prompt = `
-You are a social media content expert.
-Generate ${count} captions about "${topic}".
-Translate each caption into: ${languages.join(', ')}.
-Format as JSON array with keys for each selected language.
-`;
-
-    try {
-      const response = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer YOUR_OPENAI_API_KEY"
-        },
-        body: JSON.stringify({
-          model: "gpt-4o-mini",
-          messages: [{ role: "user", content: prompt }],
-          temperature: 0.7,
-        })
-      });
-
-      if (!response.ok) throw new Error("API Key invalid or request failed");
-
-      const data = await response.json();
-      const content = data.choices[0].message.content.trim();
-      const captions = JSON.parse(content);
-
-      displayCaptions(captions, languages);
-
-    } catch (err) {
-      console.warn("API failed, using default captions:", err);
-      displayCaptions(defaultCaptions, languages);
-    }
-
-    document.getElementById('loading').style.display = 'none';
+    // For demo fallback
+    setTimeout(()=>{
+      displayTable('caption', defaultCaptions, langs);
+      loading.style.display='none';
+    },500);
   }
 
-  function displayCaptions(captions, languages) {
-    const headerRow = document.getElementById('tableHeader');
-    headerRow.innerHTML = '';
-    languages.forEach(lang => {
-      const th = document.createElement('th');
-      th.textContent = lang;
-      headerRow.appendChild(th);
+  // Generate meme text
+  function generateMeme() {
+    const text = document.getElementById('meme-text').value;
+    const langs = Array.from(document.getElementById('meme-langs').querySelectorAll('.lang-btn.selected')).map(b=>b.dataset.lang);
+    const loading = document.getElementById('meme-loading');
+    const table = document.getElementById('meme-table');
+    loading.style.display='block'; table.style.display='none';
+    const data = langs.map(l=> ({[l]:text+" "+l}));
+    setTimeout(()=>{ displayTable('meme', data, langs); loading.style.display='none'; },300);
+  }
+
+  // Generate bios
+  function generateBio() {
+    const topic = document.getElementById('bio-topic').value;
+    const langs = Array.from(document.getElementById('bio-langs').querySelectorAll('.lang-btn.selected')).map(b=>b.dataset.lang);
+    const loading = document.getElementById('bio-loading');
+    const table = document.getElementById('bio-table');
+    loading.style.display='block'; table.style.display='none';
+    const data = langs.map(l=> ({[l]: topic + " Bio in "+l}));
+    setTimeout(()=>{ displayTable('bio', data, langs); loading.style.display='none'; },300);
+  }
+
+  // Display table helper
+  function displayTable(type, data, langs){
+    const tableBody = document.getElementById(type+'-body');
+    const header = document.getElementById(type+'-header');
+    header.innerHTML=''; tableBody.innerHTML='';
+    langs.forEach(l=>{
+      const th = document.createElement('th'); th.textContent=l; header.appendChild(th);
     });
-
-    const tableBody = document.getElementById('tableBody');
-    tableBody.innerHTML = '';
-
-    captions.forEach(item => {
-      const tr = document.createElement('tr');
-      languages.forEach(lang => {
-        const td = document.createElement('td');
-
-        const textSpan = document.createElement('span');
-        textSpan.textContent = item[lang] || '';
-        td.appendChild(textSpan);
-
-        // Copy button below caption
-        const copyBtn = document.createElement('span');
-        copyBtn.textContent = 'Copy';
-        copyBtn.title = 'Copy';
-        copyBtn.className = 'copy-btn';
-        copyBtn.onclick = () => {
-          navigator.clipboard.writeText(textSpan.textContent);
-          const originalText = copyBtn.textContent;
-          copyBtn.textContent = 'Copied!';
-          setTimeout(() => { copyBtn.textContent = originalText; }, 3000);
+    data.forEach(item=>{
+      const tr=document.createElement('tr');
+      langs.forEach(l=>{
+        const td=document.createElement('td');
+        const span=document.createElement('span'); span.textContent=item[l]||''; td.appendChild(span);
+        const copyBtn=document.createElement('span');
+        copyBtn.className='copy-btn'; copyBtn.textContent='Copy';
+        copyBtn.onclick=()=>{
+          navigator.clipboard.writeText(span.textContent);
+          const original=copyBtn.textContent;
+          copyBtn.textContent='Copied!';
+          setTimeout(()=>{copyBtn.textContent=original;},3000);
         };
         td.appendChild(document.createElement('br'));
         td.appendChild(copyBtn);
-
         tr.appendChild(td);
       });
       tableBody.appendChild(tr);
     });
-
-    document.getElementById('resultTable').style.display = 'table';
+    document.getElementById(type+'-table').style.display='table';
   }
 </script>
 
